Виправлено розмір картинки

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       воєводства і познанського повіту.
     </p>
     <a href="https://www.poznan.pl/" target="_blank">
-      <img src="./poznan.png" alt="Познань" width="700px" />
+      <img src="./poznan.png" alt="Познань" width="700" />
     </a>
   </body>
 </html>
